--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -11,6 +11,7 @@
                                       Dashboard Content Goes here 
                 </div>
             </div>
-        </div>--><p>Dashboard works here</p>
+        </div>-->
+        <p>Dashboard work here</p>
  </mat-drawer-content>
 </mat-drawer-container>
