update main component

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -4,13 +4,108 @@
     </mat-drawer>
     <mat-drawer-content>
         <app-header></app-header>
-       <!---<div class="container-fluid page">
-            <div class="d-flex page__box p-3 mt-2">Home</div>
-            <div class="page__content shadow p-3 position-relative">
-                <div class="page__content-data position-absolute text-center">
-                    Home Content Goes here
+        <div class="container-fluid">
+         
+            <div class="row">
+              <div class="col-sm-6 image3">
+                <div class="img2">
+                  <img class="image4"src="../../../assets/img/custpro.jpg">
+              </div>
+              </div>
+              <div class="col-sm-6 ">
+  
+                <div class="modal-body generaldatabox">
+                  
+                  <div class="headerprofiletitle"><h6 class="customernametitle">CUSTOMER DETAIL</h6></div>
+                  <hr>
+                  <div class="card-body">
+                    <div class="row">
+                      <div class="col-sm-5">
+                        <h6 class="mb-0 SalesDetailTitle">CUSTOMER ID </h6>
+                      </div>
+                      <div class="col-sm-7 text-secondary">
+                        <h6 class="mb-0 SalesDetailData">{{num}}</h6>
+                      </div>
+                    </div>
+  
+                    <div class="row">
+                      <div class="col-sm-5">
+                        <h6 class="mb-0 SalesDetailTitle">USER </h6>
+                      </div>
+                      <div class="col-sm-7 text-secondary">
+                        <h6 class="mb-0 SalesDetailData">{{name1}}</h6>
+                      </div>
+                    </div>
+  
+                  
+            
+                  </div>
+  
                 </div>
+                
+                <div class="row">
+                    <div class="col-sm-5">
+                      <h6 class="mb-0 SalesDetailTitle">COUNTRY </h6>
+                    </div>
+                    <div class="col-sm-7 text-secondary">
+                      <h6 class="mb-0 SalesDetailData">{{country}} - INDIA</h6>
+                    </div>
+                  </div>
+          
+                
+                <div class="modal-body generaldatabox">
+  
+                  <h6 class="customernametitle">COMMUNICATION DETAILS</h6>
+                  <hr>
+                  <div class="card-body">
+                    <div class="row">
+                      <div class="col-sm-5">
+                        <h6 class="mb-0 SalesDetailTitle">STREET & HOUSE NUMBER </h6>
+                      </div>
+                      <div class="col-sm-7 text-secondary">
+                        <h6 class="mb-0 SalesDetailData">{{address}}</h6>
+                      </div>
+                    </div>
+  
+                    <div class="row">
+                      <div class="col-sm-5">
+                        <h6 class="mb-0 SalesDetailTitle">DISTRICT </h6>
+                      </div>
+                      <div class="col-sm-7 text-secondary">
+                        <h6 class="mb-0 SalesDetailData">NA</h6>
+                      </div>
+                    </div>
+                
+                   
+                   
+                    <div class="row SalesDetailData">
+                      <div class="col-sm-5">
+                        <h6 class="mb-0 SalesDetailTitle">POSTAL CODE </h6>
+                      </div>
+                      <div class="col-sm-7 text-secondary ">
+                        <h6 class="mb-0 SalesDetailData">{{Postalcode}}</h6>
+                      </div>
+                    </div>
+                    <!-- <hr> -->
+  
+                    <div class="row SalesDetailData">
+                      <div class="col-sm-5">
+                        <h6 class="mb-0 SalesDetailTitle">TELEPHONE NUMBER </h6>
+                      </div>
+                      <div class="col-sm-7 text-secondary ">
+                        <h6 class="mb-0 SalesDetailData">{{Telenumber}}</h6>
+                      </div>
+                    </div>
+            
+                  </div>
+            
+              </div>
             </div>
-        </div>--><p>Profile view content goes here</p>
+          
+          </div>
+          
+  
+  </div>
+  
  </mat-drawer-content>
 </mat-drawer-container>
