--- a/src/styles.css
+++ b/src/styles.css
@@ -26,7 +26,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 
 html{
-    background-image: url("login-image.svg");  
+    /* background-image: url("login-image.svg");   */
     background-size:cover;
     background-repeat:no-repeat;
     background-position:center center; }
@@ -48,3 +48,179 @@ html{
     background: #302c2f;
     color: rgb(245, 245, 245);
   }
+
+  html,body {
+    height: 100%;
+}
+/* BACKGROUND GRADIENT   */
+body.my-login-page {
+    background: rgb(0,153,255);
+    background: radial-gradient(circle, rgba(0,153,255,0.1390756986388305) 32%, rgba(0,11,117,0.1474790599833683) 100%);
+    font-size: 14px;
+}
+
+.my-login-page .brand {
+    width: 111px;
+    height: 111px;
+    overflow: hidden;
+    border-radius: 50%;
+    margin: 40px auto;
+    box-shadow: 0 5px 10px rgba(0,0,0,.10);
+    position: relative;
+    z-index: 1;
+    transition: 3s;
+    background: rgba(36,39,52,0.3);
+}
+
+.my-login-page .brand img {
+    width: 100%;
+}
+
+.my-login-page .card-wrapper {
+    width: 450px;
+}
+
+.my-login-page .card {
+    border-color: transparent;
+    box-shadow: 0 4px 8px rgba(0,0,0,.05);
+}
+
+.my-login-page .card.fat {
+    padding: 10px;
+    background: rgba(36,39,52,0.3);;
+    border-radius: 35px;
+}
+
+.my-login-page .card .card-title {
+    margin-bottom: 30px;
+    text-align: center;
+    font-size: 40px;
+    font-weight: bold;
+
+
+}
+
+.my-login-page .form-control {
+    border-width: 2.3px;
+}
+
+.my-login-page .form-group label {
+    width: 100%;
+}
+
+.my-login-page .btn.btn-block {
+    padding: 12px 10px;
+}
+
+.my-login-page .footer {
+    margin: 40px 0;
+    color: #888;
+    text-align: center;
+}
+
+@media screen and (max-width: 425px) {
+    .my-login-page .card-wrapper {
+        width: 90%;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .my-login-page .card.fat {
+        padding: 0;
+    }
+
+    .my-login-page .card.fat .card-body {
+        padding: 15px;
+    }
+}
+
+#decoration {
+    text-decoration: none;
+}
+/* JS CLASS FOR ROTATE AVATAR PART ( YOU CAN REMOVE IF YOU DONT LIKE IT :) */
+.hover{
+    transition: 4s;
+    transform: rotate(360deg);
+    position: relative;
+}
+/*--------------------------------------------------------------
+# Footer 
+(YOU CAN REMOVE THIS PART IF U WANT TO USE THIS PEN IN YOUR SITE , ITS JUST MY BADGE :))) )
+--------------------------------------------------------------*/
+body #footer {
+    background: rgba(36,39,52,0.3);
+    color: black;
+    font-size: 14px;
+    text-align: center;
+    padding: 30px 0;
+    border-radius: 35px;
+    position: relative;
+    bottom: 0;
+
+}
+
+#footer h3 {
+    font-size: 36px;
+    font-weight: 700;
+    color: var(--font-light);
+    position: relative;
+    font-family: "Poppins", sans-serif;
+    padding: 0;
+    margin: 0 0 15px 0;
+}
+
+#footer p {
+    font-size: 15px;
+    font-style: italic;
+    padding: 0;
+    margin: 0 0 40px 0;
+}
+
+#footer .social-links {
+    margin: 0 0 40px 0;
+}
+
+#footer .social-links a {
+    font-size: 18px;
+    display: inline-block;
+    background: var(--light-color);
+    color: black;
+    line-height: 1;
+    padding: 8px 0;
+    margin-right: 4px;
+    border-radius: 50%;
+    text-align: center;
+    width: 36px;
+    height: 36px;
+    transition: 0.3s;
+}
+
+#footer .social-links a:hover {
+    background: var(--dark-color);
+    color: #888;
+    text-decoration: none;
+}
+
+#footer .copyright {
+    margin: 0 0 5px 0;
+}
+
+#footer .credits {
+    font-size: 13px;
+}
+#footer a {
+    text-decoration: none;
+}
+.svg-bg {
+    position: fixed;
+    bottom: 0;
+    z-index: -2;
+}
+/* FOOTER BADGE FINISH  */
+
+/* MY BADGE :)  */
+/* https://Github.com/YasinDehfuli */
+
+/* You Can Download Full Version Of This Pen Easily From My GitHub : https://github.com/YasinDehfuli/Login-Page
+ */
