--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -9,7 +9,7 @@
             <div class="row">
               <div class="col-sm-6 image3">
                 <div class="img2">
-                  <img class="image4"src="../../../assets/img/custpro.jpg">
+                  <img  class="image4"src="../../../assets/custpro.jpg" >
               </div>
               </div>
               <div class="col-sm-6 ">
