--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -3,6 +3,10 @@
         <app-sidenav></app-sidenav>
     </mat-drawer>
     <mat-drawer-content>
+      <video id="video-bg" autoplay loop>
+        <source src="Pexels.mp4" type="video/mp4">
+    </video>
+  
         <app-header></app-header>
         <div class="container-fluid">
          
