--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -47,3 +47,16 @@ mat-drawer-container{
     left:50%;
     transform: translate(-50%, -50%);
 }
+.video-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
+  
+  .video-bg video {
+    min-width: 100%;
+    min-height: 100%;
+  }
