--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,17 +1,69 @@
-<mat-drawer-container>
-    <mat-drawer mode="side" opened="true">
-        <app-sidenav></app-sidenav>
-    </mat-drawer>
-    <mat-drawer-content>
-        <app-header></app-header>
-        <!--<div class="container-fluid page">
-            <div class="d-flex page__box p-3 mt-2">Dashboard</div>
-            <div class="page__content shadow p-3 position-relative">
-                <div class="page__content-data position-absolute text-center">
-                                      Dashboard Content Goes here 
-                </div>
-            </div>
-        </div>-->
-        <p>Dashboard work here</p>
- </mat-drawer-content>
-</mat-drawer-container>
+<html>
+    <body>
+        <table border="2">
+        
+        <thead>
+        <tr>
+            <th>
+           
+                Doc No.
+           </th>
+            <th>
+                Rec Date
+            </th>
+           
+            <th>Name</th>
+            
+            <th>
+                Quotation
+            </th>
+            <th>
+                Quotation Date 
+            </th>
+            <th>
+                Valid Date
+            </th>
+            <th>
+                
+                ExpiryDate
+            </th>
+            <th>
+                Delivery Date
+            </th>
+            <th>
+                Delivery Sales
+            </th>
+        </tr>
+
+        </thead>
+        <tbody>
+            <tr *ngFor="let item of data">
+          
+                <td>{{item.VBELN}}</td>
+          
+                <td>{{item.ERDAT}}</td>
+            
+                <td>{{item.ERNAM}}</td> 
+            
+                <td>{{item.ANGDT}}</td>
+            
+                <td>{{item.BNDDT}}</td>
+          
+                <td>{{item.AUDAT}}</td>
+          
+                <td>{{item.GUEBG}}</td>
+          
+                <td>{{item.GUEEN}}</td>
+            
+                <td>{{item.VDATU}}</td>
+          
+                <td>{{item.AUTLF}}</td>
+          
+                <!-- <td><button data-toggle="modal" data-backdrop="false" data-target="#exampleModalCenter" class="Tablebutton" >Details</button></td> -->
+          
+            </tr>
+            
+          </tbody>
+          </table>
+    </body>
+</html>
