--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,31 +1,104 @@
-<mat-toolbar color = "primary">
-    Customer Portal
-<div class="bg"></div>
-<!-- <button mat-button routerLink="home">
-<mat-icon>login</mat-icon>
-Home
-</button> -->
-</mat-toolbar>
+<!DOCTYPE html>
+<html lang="en">
 
-<div class="content">
-<div class="form-container mat-elevation-z5">
-<h1>Login</h1>
-<form [formGroup] = "loginForm">
-<mat-form-field>
-<input matInput placeholder="Customer ID" style="font: size 36px" formControlName = "email"/>
-</mat-form-field>
-<mat-form-field>
-<input matInput placeholder="Password" formControlName = "password" type = "password"/>
-</mat-form-field>
-<div class="center margin-top" >
-<button mat-raised-button color="primary" style="padding: 12px 24px; font-size: 18px;" (click)="log()">Login</button>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@800&display=swap" rel="stylesheet">
+  <title>Customer Portal</title>
+</head>
 
-</div>
+<body onmousemove="getCursorPosition(event)">
+  <div class="wrapper">
+    <main>
+      <section>
+        <div class="face">
+          <img src="https://assets.codepen.io/9277864/PF.png" alt="Face" widht="250" height="250" />
+          <div class="eye-cover1">
+            <div id="eyes1"></div>
+          </div>
 
-<!-- <span class="center margin-top"> New to our platform? 
-<a class="sign-up-link" routerLink = "sign-up"></a>
-</span> -->
-</form>
-</div>
-</div>
+          <div class="eye-cover2">
+            <div id="eyes2"></div>
+          </div>
+        </div>
+        <div class="login-container">
+          <div class="social-login">
+            <div class="logo">
+              <img src="https://assets.codepen.io/9277864/robot-face-3.svg" width="100" height="100" />
+              <!-- <p>Gravam</p> -->
+            </div>
+            
+            <div class="social-grp">
+                <p style="color:brown;">EXPLORE US!!!</p>
+              <div class="btn"><a href="https://twitter.com/kaartech?lang=en" target="_blank"><img src="https://assets.codepen.io/9277864/social-media-twitter.svg" alt="" width="32" height="32" /><span>Twitter</span></a></div>
+              <div class="btn"><a href="https://www.facebook.com/kaartech/" target="_blank"><img src="https://assets.codepen.io/9277864/social-media-facebook.svg" alt="" width="32" height="32" /><span>Facebook</span></a></div>
+              <div class="btn"><a href="https://www.kaartech.com/" target="_blank"><img src="https://assets.codepen.io/9277864/social-media-google.svg" alt="" width="32" height="32" /><span>Google</span></a></div>
+            </div>
+          </div>
+          <div class="email-login">
+            <div class="login-h-container">
+              <h1>Login to your account</h1>
+              <!-- <p>Don’t have an account? <a href="#">Sign up Free!</a></p> -->
+            </div>
+            <form [formGroup]="loginForm">
+              <label for="email">
+                <input id="email" formControlName="email" type="email" placeholder="Email" name="email" autocomplete="off">
+                <!-- <span id="span-email">Email</span> -->
+              </label>
+              <label for="password">
+                <input id="password" formControlName="password" type="password" name="password" placeholder="Password">
+                <!-- <span id="span-password">Password</span> -->
+              </label>
+              <div class="recovery">
+                <div>
+                  <input type="checkbox" id="remember" name="remember">
+                  <label for="remember">Remember me</label>
+                </div>
+                <!-- <a href="">Forgot Password?</a> -->
+              </div>
+              <button type="submit" (click)="log()">Login</button>
+            </form>
+          </div>
+        </div>
+      </section>
+      <div class="vector-1"></div>
+      <div class="vector-2"></div>
+      <div class="vector-3"></div>
+    </main>
+    <footer>
+      <small>KAAR TECHNOLOGIES <a href="https://www.kaartech.com/" target="_top"></a></small>
+    </footer>
+  </div>
+<script src="yogi.js"></script>
+</body>
 
+
+</html>
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <form [formGroup]="loginForm">
+        <input type="text" formControlName="email" id="email">
+        <input type="password" formControlName="password" id="password">
+        <button (click)="log()">Login</button>
+
+    </form>
+    
+</body>
+</html> -->
+
+
+<!-- </form> -->
