--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -10,7 +10,23 @@
     <a mat-list-item routerLink="/dashboard" routerLinkActive="list-item-active">
         <mat-icon>dashboard</mat-icon> Dashboard
     </a>
-    <a mat-list-item routerLink="/sign-up" routerLinkActive="list-item-active">
-        <mat-icon>dashboard</mat-icon> FinancialSheet
+    
+    <a mat-list-item routerLink="/delivery" routerLinkActive="list-item-active">
+        <mat-icon>dashboard</mat-icon> Delivery
+    </a>
+    <a mat-list-item routerLink="/sales" routerLinkActive="list-item-active">
+        <mat-icon>dashboard</mat-icon> SALESORDER
+    </a>
+    <a mat-list-item routerLink="/credit" routerLinkActive="list-item-active">
+        <mat-icon>dashboard</mat-icon> CREDIT
+    </a>
+    <a mat-list-item routerLink="/debit" routerLinkActive="list-item-active">
+        <mat-icon>dashboard</mat-icon> DEBIT
+    </a>
+    <a mat-list-item routerLink="/invoice" routerLinkActive="list-item-active">
+        <mat-icon>dashboard</mat-icon> INVOICE
+    </a>
+    <a mat-list-item routerLink="/payage" routerLinkActive="list-item-active">
+        <mat-icon>dashboard</mat-icon> PAYAGE
     </a>
 </mat-nav-list>
